--- a/BlazorApp/wwwroot/index.html
+++ b/BlazorApp/wwwroot/index.html
@@ -10,7 +10,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAITqkXnk8ZkmBsLjlhKBIX11SmE2cNNRY&v=3"></script>
     <script src="_content/BlazorGoogleMaps/objectManager.js"></script>
-
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">-->
 </head>
 
 <body>
