--- a/BlazorApp/wwwroot/WebDesign/index.html
+++ b/BlazorApp/wwwroot/WebDesign/index.html
@@ -49,7 +49,7 @@
 
         <!-- NotAuthenticated Users-->
         <p class="ms-fontSize-14 ms-fontWeight-regular">Sign in with your Micorosft Account to get started(Example only)</p>
-        <a href="#" class="microsoft-login-button shadow-effect"><img src="assets/images/microsoft.png" alt=""> Sign in
+        <a href="#" class="microsoft-login-button shadow-effect"><img src="/images/microsoft.png" alt=""> Sign in
             with Microsoft</a>
     </header>
 
